guestbook/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: guestbook-ingress
spec:
  rules:
    - host: frontend.minikube.local
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
    - host: backend.minikube.local
      http:
        paths:
        - backend:
            serviceName: backend
            servicePort: 80
          path: /
